--- a/src/about-us.html
+++ b/src/about-us.html
@@ -121,7 +121,7 @@
                     </ul>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="./about-us.html">私たちについて</a>
+                    <a href="#">私たちについて</a>
                   </div>
                 </li>
               </ul>
@@ -129,7 +129,7 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">お客様の声</a>
+                    <a href="./voice.html">お客様の声</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./price.html">料金一覧</a>
@@ -175,13 +175,15 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">よくある質問</a>
+                    <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                    <a href="./privacy-policy.html"
+                      >プライバシー<br class="u-mobile" />ポリシー</a
+                    >
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">利用規約</a>
+                    <a href="./terms-of-service.html">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./contact.html">お問い合わせ</a>
@@ -209,7 +211,7 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">about us</h2>
+          <h2 class="sub-page-title__main">About us</h2>
         </div>
       </section>
 
@@ -265,7 +267,7 @@
                 Dive into<br />
                 the Ocean
               </h3>
-              <div class="about-us__text-wrap">
+              <div class="about-us__text-wrap about-us__text-wrap--margin">
                 <div class="about-us__text">
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
@@ -284,43 +286,52 @@
               <div class="gallery__modal js-modal">
                 <ul class="gallery__list gallery-list">
                   <li class="gallery-list__item js-modal-open">
-                    <img
-                      src="./assets/images/sub/sub-aboutus_1.jpg"
-                      alt="海の中でたくさんの赤い小さな魚が泳いでいる様子"
-                    />
+                    <a href="">
+                      <img
+                        src="./assets/images/sub/sub-aboutus_1.jpg"
+                        alt="海の中でたくさんの赤い小さな魚が泳いでいる様子"
+                    /></a>
                   </li>
                   <li class="gallery-list__item js-modal-open">
-                    <img
-                      src="./assets/images/sub/sub-aboutus_2.jpg"
-                      alt="透明な海にボートが浮かんでいる様子"
-                    />
+                    <a href="">
+                      <img
+                        src="./assets/images/sub/sub-aboutus_2.jpg"
+                        alt="透明な海にボートが浮かんでいる様子"
+                    /></a>
                   </li>
                   <li class="gallery-list__item js-modal-open">
-                    <img
-                      src="./assets/images/sub/sub-aboutus_3.jpg"
-                      alt="2匹の黄色い魚が多いでいる様子"
-                    />
+                    <a href="">
+                      <img
+                        src="./assets/images/sub/sub-aboutus_3.jpg"
+                        alt="2匹の黄色い魚が多いでいる様子"
+                    /></a>
                   </li>
                   <li class="gallery-list__item js-modal-open">
-                    <img
-                      src="./assets/images/sub/sub-aboutus_4.jpg"
-                      alt="海の中の黄色の魚の様子"
-                    />
+                    <a href="">
+                      <img
+                        src="./assets/images/sub/sub-aboutus_4.jpg"
+                        alt="海の中の黄色の魚の様子"
+                    /></a>
                   </li>
                   <li class="gallery-list__item js-modal-open">
-                    <img
-                      src="./assets/images/sub/sub-aboutus_5.jpg"
-                      alt="大量の魚が泳いでいる様子"
-                    />
+                    <a href="">
+                      <img
+                        src="./assets/images/sub/sub-aboutus_5.jpg"
+                        alt="大量の魚が泳いでいる様子"
+                    /></a>
                   </li>
                   <li class="gallery-list__item js-modal-open">
-                    <img
-                      src="./assets/images/sub/sub-aboutus_6.jpg"
-                      alt="珊瑚礁と黄色の2匹の魚の様子"
-                    />
+                    <a href="">
+                      <img
+                        src="./assets/images/sub/sub-aboutus_6.jpg"
+                        alt="珊瑚礁と黄色の2匹の魚の様子"
+                    /></a>
                   </li>
                 </ul>
-                <div class="zoom__content"></div>
+                <div class="modal">
+                  <div class="bigimg"><img src="" alt="" /></div>
+                </div>
+                <!-- <div class="zoom__content"></div> -->
               </div>
             </div>
           </div>
@@ -383,7 +394,7 @@
       </section>
     </main>
 
-    <footer class="footer layout-footer">
+    <footer class="footer layout-footer layout-footer--about-us">
       <div class="footer__inner inner">
         <div class="footer__wrap">
           <div class="footer__logo">
@@ -424,7 +435,7 @@
                   </ul>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="./about-us.html">私たちについて</a>
+                  <a href="#">私たちについて</a>
                 </div>
               </li>
             </ul>
@@ -481,10 +492,12 @@
                   <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                  <a href="./privacy-policy.html"
+                    >プライバシー<br class="u-mobile" />ポリシー</a
+                  >
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">利用規約</a>
+                  <a href="./terms-of-service.html">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./contact.html">お問い合わせ</a>
