--- a/src/blog-detail.html
+++ b/src/blog-detail.html
@@ -65,7 +65,7 @@
         <nav class="header__nav">
           <ul class="header__nav-items">
             <li class="header__nav-item">
-              <a href="#">Campaign<span>キャンペーン</span></a>
+              <a href="./campaign.html">Campaign<span>キャンペーン</span></a>
             </li>
             <li class="header__nav-item">
               <a href="./about-us.html">About us<span>私たちについて</span></a>
@@ -76,7 +76,7 @@
               >
             </li>
             <li class="header__nav-item">
-              <a href="./blog.html">Blog<span>ブログ</span></a>
+              <a href="#">Blog<span>ブログ</span></a>
             </li>
             <li class="header__nav-item">
               <a href="./voice.html">Voice<span>お客様の声</span></a>
@@ -129,7 +129,7 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">お客様の声</a>
+                    <a href="./voice.html">お客様の声</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./price.html">料金一覧</a>
@@ -167,7 +167,7 @@
                     </ul>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="./blog.html">ブログ</a>
+                    <a href="#">ブログ</a>
                   </div>
                 </li>
               </ul>
@@ -175,13 +175,15 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">よくある質問</a>
+                    <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                    <a href="./privacy-policy.html"
+                      >プライバシー<br class="u-mobile" />ポリシー</a
+                    >
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">利用規約</a>
+                    <a href="./terms-of-service.html">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./contact.html">お問い合わせ</a>
@@ -209,12 +211,12 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">blog</h2>
+          <h2 class="sub-page-title__main">Blog</h2>
         </div>
       </section>
 
       <div class="sub-blog layout-sub-blog decoration">
-        <div class="sub-blog__inner inner">
+        <div class="sub-blog__inner sub-blog__inner--padding inner">
           <div class="sub-blog__breadcrumb breadcrumb">
             <div class="breadcrumb__inner">
               <!-- Breadcrumb NavXTで出力される部分 ここから -->
@@ -274,12 +276,19 @@
                 </p>
               </div>
 
-              <div class="sub-blog-detail__pagenavi">
-                <div class="sub-blog-detail__pagenavi-inner">
+              <div class="sub-blog-detail__pagenavi pagenavi">
+                <div class="pagenavi__inner pagenavi__inner--detail">
                   <!-- WP-PageNaviで出力される部分 ここから -->
-                  <div class="wp-pagenavi" role="navigation">
-                    <a class="previouspostslink" rel="prev" href="#">&lt;</a>
-                    <a class="nextpostslink" rel="next" href="#">&gt;</a>
+                  <div
+                    class="wp-pagenavi wp-pagenavi--detail"
+                    role="navigation"
+                  >
+                    <a class="previouspostslink" rel="prev" href="#"
+                      ><span></span
+                    ></a>
+                    <a class="nextpostslink" rel="next" href="#"
+                      ><span></span
+                    ></a>
                   </div>
                   <!-- WP-PageNaviで出力される部分 ここまで -->
                 </div>
@@ -433,7 +442,7 @@
                     </li>
 
                     <li class="sub-blog__campaign-card">
-                      <a href="#" class="campaign-card campaign-card--aside">
+                      <a href="#" class="campaign-card campaign-card--large">
                         <div class="campaign-card__img">
                           <img
                             src="./assets/images/common/campaign_2.jpg"
@@ -636,7 +645,7 @@
                   </ul>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="./blog.html">ブログ</a>
+                  <a href="#">ブログ</a>
                 </div>
               </li>
             </ul>
@@ -647,10 +656,12 @@
                   <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                  <a href="./privacy-policy.html"
+                    >プライバシー<br class="u-mobile" />ポリシー</a
+                  >
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">利用規約</a>
+                  <a href="./terms-of-service.html">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./contact.html">お問い合わせ</a>
