--- a/src/blog.html
+++ b/src/blog.html
@@ -65,7 +65,7 @@
         <nav class="header__nav">
           <ul class="header__nav-items">
             <li class="header__nav-item">
-              <a href="#">Campaign<span>キャンペーン</span></a>
+              <a href="./campaign.html">Campaign<span>キャンペーン</span></a>
             </li>
             <li class="header__nav-item">
               <a href="./about-us.html">About us<span>私たちについて</span></a>
@@ -76,7 +76,7 @@
               >
             </li>
             <li class="header__nav-item">
-              <a href="./blog.html">Blog<span>ブログ</span></a>
+              <a href="#">Blog<span>ブログ</span></a>
             </li>
             <li class="header__nav-item">
               <a href="./voice.html">Voice<span>お客様の声</span></a>
@@ -129,7 +129,7 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">お客様の声</a>
+                    <a href="./voice.html">お客様の声</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./price.html">料金一覧</a>
@@ -167,7 +167,7 @@
                     </ul>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="./blog.html">ブログ</a>
+                    <a href="#">ブログ</a>
                   </div>
                 </li>
               </ul>
@@ -175,13 +175,15 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">よくある質問</a>
+                    <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                    <a href="./privacy-policy.html"
+                      >プライバシー<br class="u-mobile" />ポリシー</a
+                    >
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">利用規約</a>
+                    <a href="./terms-of-service.html">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./contact.html">お問い合わせ</a>
@@ -209,7 +211,7 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">blog</h2>
+          <h2 class="sub-page-title__main">Blog</h2>
         </div>
       </section>
 
@@ -235,7 +237,7 @@
             <div class="sub-blog__main">
               <ul class="sub-blog__items blog-cards blog-cards--subPage">
                 <li class="blog-cards__item">
-                  <a href="#" class="blog-card">
+                  <a href="./blog-detail.html" class="blog-card">
                     <div class="blog-card__img blog-card__img--animation">
                       <img
                         src="./assets/images/common/blog_1.jpg"
@@ -460,14 +462,18 @@
                 <div class="pagenavi__inner">
                   <!-- WP-PageNaviで出力される部分 ここから -->
                   <div class="wp-pagenavi" role="navigation">
-                    <a class="previouspostslink" rel="prev" href="#">&lt;</a>
-                    <span class="current">1</span>
+                    <a class="previouspostslink" rel="prev" href="#"
+                      ><span></span
+                    ></a>
+                    <a class="page larger" href="#">1</a>
                     <a class="page larger" href="#">2</a>
                     <a class="page larger" href="#">3</a>
                     <a class="page larger" href="#">4</a>
                     <a class="page larger u-desktop" href="#">5</a>
                     <a class="page larger u-desktop" href="#">6</a>
-                    <a class="nextpostslink" rel="next" href="#">&gt;</a>
+                    <a class="nextpostslink" rel="next" href="#"
+                      ><span></span
+                    ></a>
                   </div>
                   <!-- WP-PageNaviで出力される部分 ここまで -->
                 </div>
@@ -589,7 +595,7 @@
                   </div>
                   <ul class="sub-blog__campaign-cards">
                     <li class="sub-blog__campaign-card">
-                      <a href="#" class="campaign-card campaign-card">
+                      <a href="#" class="campaign-card campaign-card--large">
                         <div
                           class="campaign-card__img campaign-card__img--aside"
                         >
@@ -630,10 +636,8 @@
                     </li>
 
                     <li class="sub-blog__campaign-card">
-                      <a href="#" class="campaign-card campaign-card">
-                        <div
-                          class="campaign-card__img campaign-card__img--aside"
-                        >
+                      <a href="#" class="campaign-card campaign-card--large">
+                        <div class="campaign-card__img">
                           <img
                             src="./assets/images/common/campaign_2.jpg"
                             alt="海の中を色鮮やかなたくさんの魚が泳いでいる様子"
@@ -700,7 +704,7 @@
         </div>
       </div>
 
-      <section class="contact layout-contact layout-contact--aboutus">
+      <section class="contact layout-contact layout-contact--blog">
         <div class="contact__inner inner">
           <div class="contact__wrap">
             <div class="contact__info">
@@ -843,7 +847,7 @@
                   </ul>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="./blog.html">ブログ</a>
+                  <a href="#">ブログ</a>
                 </div>
               </li>
             </ul>
@@ -854,10 +858,12 @@
                   <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                  <a href="./privacy-policy.html"
+                    >プライバシー<br class="u-mobile" />ポリシー</a
+                  >
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">利用規約</a>
+                  <a href="./terms-of-service.html">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./contact.html">お問い合わせ</a>
