--- a/src/campaign.html
+++ b/src/campaign.html
@@ -129,7 +129,7 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">お客様の声</a>
+                    <a href="./voice.html">お客様の声</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./price.html">料金一覧</a>
@@ -175,13 +175,15 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">よくある質問</a>
+                    <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                    <a href="./privacy-policy.html"
+                      >プライバシー<br class="u-mobile" />ポリシー</a
+                    >
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">利用規約</a>
+                    <a href="./terms-of-service.html">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./contact.html">お問い合わせ</a>
@@ -209,7 +211,7 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">campaign</h2>
+          <h2 class="sub-page-title__main">Campaign</h2>
         </div>
       </section>
 
@@ -448,14 +450,17 @@
             <div class="pagenavi__inner">
               <!-- WP-PageNaviで出力される部分 ここから -->
               <div class="wp-pagenavi" role="navigation">
-                <a class="previouspostslink" rel="prev" href="#">&lt;</a>
-                <span class="current">1</span>
+                <a class="previouspostslink" rel="prev" href="#"
+                  ><span></span
+                ></a>
+                <a class="page larger" href="#">1</a>
+                <!-- <span class="current">1</span> -->
                 <a class="page larger" href="#">2</a>
                 <a class="page larger" href="#">3</a>
                 <a class="page larger" href="#">4</a>
                 <a class="page larger u-desktop" href="#">5</a>
                 <a class="page larger u-desktop" href="#">6</a>
-                <a class="nextpostslink" rel="next" href="#">&gt;</a>
+                <a class="nextpostslink" rel="next" href="#"><span></span></a>
               </div>
               <!-- WP-PageNaviで出力される部分 ここまで -->
             </div>
@@ -463,7 +468,7 @@
         </div>
       </div>
 
-      <section class="contact layout-contact">
+      <section class="contact layout-contact layout-contact--campagin">
         <div class="contact__inner inner">
           <div class="contact__wrap">
             <div class="contact__info">
@@ -519,7 +524,7 @@
       </section>
     </main>
 
-    <footer class="footer layout-footer">
+    <footer class="footer layout-footer layout-footer--campaign">
       <div class="footer__inner inner">
         <div class="footer__wrap">
           <div class="footer__logo">
@@ -544,7 +549,7 @@
             <ul class="nav-contents__contents">
               <li class="nav-contents__group">
                 <div class="nav-contents__title">
-                  <a href="./campaign.html">キャンペーン</a>
+                  <a href="#">キャンペーン</a>
                 </div>
                 <div>
                   <ul class="nav-contents__items">
@@ -617,10 +622,12 @@
                   <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                  <a href="./privacy-policy.html"
+                    >プライバシー<br class="u-mobile" />ポリシー</a
+                  >
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">利用規約</a>
+                  <a href="./terms-of-service.html">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./contact.html">お問い合わせ</a>
