--- a/src/information.html
+++ b/src/information.html
@@ -173,13 +173,15 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">よくある質問</a>
+                    <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                    <a href="./privacy-policy.html"
+                      >プライバシー<br class="u-mobile" />ポリシー</a
+                    >
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">利用規約</a>
+                    <a href="./terms-of-service.html">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./contact.html">お問い合わせ</a>
@@ -207,7 +209,7 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">information</h2>
+          <h2 class="sub-page-title__main">Information</h2>
         </div>
       </section>
 
@@ -240,7 +242,7 @@
                 >
                   <div class="tab-info__img u-desktop">
                     <img
-                      src="./assets/images/sub/whale-green.png"
+                      src="./assets/images/sub/whale-white.png"
                       alt="鯨のアイコン"
                     />
                   </div>
@@ -359,7 +361,7 @@
         </div>
       </section>
 
-      <section class="contact layout-contact layout-contact--aboutus">
+      <section class="contact layout-contact layout-contact--info">
         <div class="contact__inner inner">
           <div class="contact__wrap">
             <div class="contact__info">
@@ -415,7 +417,7 @@
       </section>
     </main>
 
-    <footer class="footer layout-footer">
+    <footer class="footer layout-footer layout-footer--info">
       <div class="footer__inner inner">
         <div class="footer__wrap">
           <div class="footer__logo">
@@ -513,10 +515,12 @@
                   <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                  <a href="./privacy-policy.html"
+                    >プライバシー<br class="u-mobile" />ポリシー</a
+                  >
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">利用規約</a>
+                  <a href="./terms-of-service.html">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./contact.html">お問い合わせ</a>
