--- a/src/site-map.html
+++ b/src/site-map.html
@@ -79,16 +79,16 @@
               <a href="./blog.html">Blog<span>ブログ</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Voice<span>お客様の声</span></a>
+              <a href="./voice.html">Voice<span>お客様の声</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Price<span>料金一覧</span></a>
+              <a href="./price.html">Price<span>料金一覧</span></a>
             </li>
             <li class="header__nav-item">
               <a href="./faq.html">FAQ<span>よくある質問</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Contact<span>お問合せ</span></a>
+              <a href="./contact.html">Contact<span>お問合せ</span></a>
             </li>
           </ul>
         </nav>
@@ -132,7 +132,7 @@
                     <a href="./voice.html">お客様の声</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">料金一覧</a>
+                    <a href="./price.html">料金一覧</a>
                   </div>
                   <ul class="nav-contents__items">
                     <li class="nav-contents__item">
@@ -175,16 +175,18 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">よくある質問</a>
+                    <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                    <a href="./privacy-policy.html"
+                      >プライバシー<br class="u-mobile" />ポリシー</a
+                    >
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">利用規約</a>
+                    <a href="./terms-of-service.html">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">お問い合わせ</a>
+                    <a href="./contact.html">お問い合わせ</a>
                   </div>
                 </li>
               </ul>
@@ -268,7 +270,7 @@
                       <a href="./voice.html">お客様の声</a>
                     </div>
                     <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">料金一覧</a>
+                      <a href="./price.html">料金一覧</a>
                     </div>
                     <ul class="nav-contents__items">
                       <li class="nav-contents__item">
@@ -315,18 +317,18 @@
                 >
                   <li class="nav-contents__group">
                     <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">よくある質問</a>
+                      <a href="./faq.html">よくある質問</a>
                     </div>
                     <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#"
+                      <a href="./privacy-policy.html"
                         >プライバシー<br class="u-mobile" />ポリシー</a
                       >
                     </div>
                     <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">利用規約</a>
+                      <a href="./terms-of-service.html">利用規約</a>
                     </div>
                     <div class="nav-contents__title nav-contents__title--dark">
-                      <a href="#">お問い合わせ</a>
+                      <a href="./contact.html">お問い合わせ</a>
                     </div>
                   </li>
                 </ul>
@@ -336,7 +338,7 @@
         </div>
       </div>
 
-      <section class="contact layout-contact">
+      <section class="contact layout-contact layout-contact--site-map">
         <div class="contact__inner inner">
           <div class="contact__wrap">
             <div class="contact__info">
@@ -392,7 +394,7 @@
       </section>
     </main>
 
-    <footer class="footer layout-footer">
+    <footer class="footer layout-footer layout-footer--contact">
       <div class="footer__inner inner">
         <div class="footer__wrap">
           <div class="footer__logo">
@@ -490,13 +492,15 @@
                   <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                  <a href="./privacy-policy.html"
+                    >プライバシー<br class="u-mobile" />ポリシー</a
+                  >
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">利用規約</a>
+                  <a href="./terms-of-service.html">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">お問い合わせ</a>
+                  <a href="./contact.html">お問い合わせ</a>
                 </div>
               </li>
             </ul>
