--- a/src/404.html
+++ b/src/404.html
@@ -183,7 +183,7 @@
                     >
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">利用規約</a>
+                    <a href="./terms-of-service.html">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./contact.html">お問い合わせ</a>
@@ -334,7 +334,7 @@
                   >
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">利用規約</a>
+                  <a href="./terms-of-service.html">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./contact.html">お問い合わせ</a>
