--- a/src/price.html
+++ b/src/price.html
@@ -79,7 +79,7 @@
               <a href="./blog.html">Blog<span>ブログ</span></a>
             </li>
             <li class="header__nav-item">
-              <a href="#">Voice<span>お客様の声</span></a>
+              <a href="./voice.html">Voice<span>お客様の声</span></a>
             </li>
             <li class="header__nav-item">
               <a href="#">Price<span>料金一覧</span></a>
@@ -209,7 +209,7 @@
           </picture>
         </div>
         <div class="sub-mv__title-wrap sub-page-title">
-          <h2 class="sub-page-title__main">price</h2>
+          <h2 class="sub-page-title__main">Price</h2>
         </div>
       </section>
 
@@ -366,7 +366,7 @@
         </div>
       </div>
 
-      <section class="contact layout-contact">
+      <section class="contact layout-contact layout-contact--price">
         <div class="contact__inner inner">
           <div class="contact__wrap">
             <div class="contact__info">
@@ -474,7 +474,7 @@
                   <a href="./voice.html">お客様の声</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="./price.html">料金一覧</a>
+                  <a href="#">料金一覧</a>
                 </div>
                 <ul class="nav-contents__items">
                   <li class="nav-contents__item">
@@ -520,10 +520,12 @@
                   <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                  <a href="./privacy-policy.html"
+                    >プライバシー<br class="u-mobile" />ポリシー</a
+                  >
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">利用規約</a>
+                  <a href="./terms-of-service.html">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./contact.html">お問い合わせ</a>
