--- a/src/voice.html
+++ b/src/voice.html
@@ -129,7 +129,7 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="./voice.html">お客様の声</a>
+                    <a href="#">お客様の声</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./price.html">料金一覧</a>
@@ -175,13 +175,15 @@
               <ul class="nav-contents__contents">
                 <li class="nav-contents__group">
                   <div class="nav-contents__title">
-                    <a href="#">よくある質問</a>
+                    <a href="./faq.html">よくある質問</a>
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                    <a href="./privacy-policy.html"
+                      >プライバシー<br class="u-mobile" />ポリシー</a
+                    >
                   </div>
                   <div class="nav-contents__title">
-                    <a href="#">利用規約</a>
+                    <a href="./terms-of-service.html">利用規約</a>
                   </div>
                   <div class="nav-contents__title">
                     <a href="./contact.html">お問い合わせ</a>
@@ -434,14 +436,16 @@
             <div class="pagenavi__inner">
               <!-- WP-PageNaviで出力される部分 ここから -->
               <div class="wp-pagenavi" role="navigation">
-                <a class="previouspostslink" rel="prev" href="#">&lt;</a>
-                <span class="current">1</span>
+                <a class="previouspostslink" rel="prev" href="#"
+                  ><span></span
+                ></a>
+                <a class="page larger" href="#">1</a>
                 <a class="page larger" href="#">2</a>
                 <a class="page larger" href="#">3</a>
                 <a class="page larger" href="#">4</a>
                 <a class="page larger u-desktop" href="#">5</a>
                 <a class="page larger u-desktop" href="#">6</a>
-                <a class="nextpostslink" rel="next" href="#">&gt;</a>
+                <a class="nextpostslink" rel="next" href="#"><span></span></a>
               </div>
               <!-- WP-PageNaviで出力される部分 ここまで -->
             </div>
@@ -603,10 +607,12 @@
                   <a href="./faq.html">よくある質問</a>
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">プライバシー<br class="u-mobile" />ポリシー</a>
+                  <a href="./privacy-policy.html"
+                    >プライバシー<br class="u-mobile" />ポリシー</a
+                  >
                 </div>
                 <div class="nav-contents__title">
-                  <a href="#">利用規約</a>
+                  <a href="./terms-of-service.html">利用規約</a>
                 </div>
                 <div class="nav-contents__title">
                   <a href="./contact.html">お問い合わせ</a>
